--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "git-commit-msg-linter": "^4.5.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "typescript": "^4.9.5"
   }
 }
