--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,3 @@
 {
-  "*.{ts,tsx}": [
-    "eslint 'src/**' --fix "
-  ]
+  "*.{ts,tsx}": ["eslint 'src/**' --fix ", "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx)\""]
 }
