--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,8 @@
     "webpack",
     "jest",
     "src/setupTests.ts"
-  ]
+  ],  
+  "parserOptions": {
+      "project": ["./tsconfig.json"]
+    }
 }
