--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,3 @@
 {
-  "*.{ts,tsx}": [
-    "eslint 'src/**' --fix",
-    "prettier --ignore-path .gitignore --write"
-  ]
+  "*.{ts,tsx}": ["pnpm lint", "pnpm format", "pnpm test:staged"]
 }
