--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "faker": "^6.6.6",
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.3",
     "jest": "^29.4.1",
