refactor: change imports to use module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    },
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es2017",
