--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "prettier": "^2.8.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "axios": "^1.3.2"
   }
 }
