--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:ci": "pnpm test -- --coverage",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx)\"",
     "prepare": "husky install",
-    "lint": "eslint 'src/**' --fix"
+    "lint": "eslint 'src/**' --fix",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,11 @@
     "@faker-js/faker": "^7.6.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
@@ -33,9 +38,12 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1"
   },
   "dependencies": {
-    "axios": "^1.3.2"
+    "axios": "^1.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
