--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-react": "^7.18.6",
     "@faker-js/faker": "^7.6.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
