--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.51.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
@@ -38,7 +39,9 @@
     "husky": "^8.0.3",
     "jest": "^29.4.1",
     "lint-staged": "^13.1.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
     "vite": "^4.1.1"
