chore: config tailwindcss

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:ci": "pnpm test -- --coverage",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx)\"",
     "prepare": "husky install",
-    "lint": "eslint 'src/**' --fix",
+    "lint": "eslint 'src/*.{ts,tsx}' --fix",
     "dev": "vite"
   },
   "keywords": [],
