--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,9 @@
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/method-signature-style": "off",
     "@typescript-eslint/no-confusing-void-expression": "off",
-    "@typescript-eslint/prefer-nullish-coalescing": "off"
+    "@typescript-eslint/prefer-nullish-coalescing": "off",
+    "react/react-in-jsx-scope": "off",
+    "css(unknownAtRules)": "off"
   },
   "settings": {
     "react": {
