--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:ci": "pnpm test -- --coverage",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx)\"",
     "prepare": "husky install",
-    "lint": "eslint 'src/*.{ts,tsx}' --fix",
+    "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "dev": "vite"
   },
   "keywords": [],
@@ -41,10 +41,12 @@
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
-    "vite": "^4.1.1"
+    "vite": "^4.1.1",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "dependencies": {
     "axios": "^1.3.2",
