chore: add react testing library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,13 @@
     },
     "outDir": "build/dist",
     "module": "esnext",
-    "target": "es2017",
+    "target": "esnext",
     "lib": ["es6", "dom", "esnext.asynciterable", "es2017"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
+    "isolatedModules": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
@@ -22,7 +24,8 @@
     "noUnusedLocals": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "removeComments": true
+    "removeComments": true,
+    "noEmit": true,
   },
   "exclude": [
     "node_modules",
