--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests",
     "test:watch": "pnpm test -- --watch",
     "test:staged": "pnpm test -- --findRelatedTests",
     "test:ci": "pnpm test -- --coverage",
@@ -18,8 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@babel/preset-react": "^7.18.6",
     "@faker-js/faker": "^7.6.0",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
@@ -38,6 +38,8 @@
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.3",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.2",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
