--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "removeComments": true,
-    "noEmit": true,
+    "noEmit": true
   },
   "exclude": [
     "node_modules",
